Updated index with proper color scheme

--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+html {
+    text-align: center;
+    background-color: #111111;
+    color: white;
+}
+
 h1 {
-    color: rebeccapurple;
+    color: #e34234;
 }
