--- a/main.css
+++ b/main.css
@@ -7,3 +7,18 @@ html {
 h1 {
     color: #e34234;
 }
+
+.flex-container {
+    display: flex;
+    /*flex-direction: column;
+    Decides in which direction to stack the flex items.*/
+
+    /*flex-wrap: wrap;
+    Specifies whether the items should wrap or not*/
+
+    flex-flow: row wrap;
+    /*Shorthand for deciding setting flex-direction and flex-wrap at the same time*/
+
+    justify-content: space-around;
+    /* Decides how to align the content, flex-start is the default */
+}
