--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ a {
     color: #ba181b;
 }
 
+a:hover {
+    color: #660708
+}
+
 .flex-container {
     display: flex;
     /*flex-direction: column;
