--- a/craft.css
+++ b/craft.css
@@ -27,3 +27,56 @@ main {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+
+/* Dropdown button */
+.dropbtn {
+    background-color: #111111;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    /* border: double; */
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #161a1d;
+}
+
+/* The container div - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown content (hidden by default) */
+/*.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}*/
+
+/* Links inside the dropdown */
+/*.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}*/
+
+/* Change color of dropdown links on hover */
+/*.dropdown-content a:hover {
+    background-color: #ddd;
+}*/
+
+/* Show the dropdown menu (use js to add this class to the .dropdown container when the user clicks on the dropdown button) */
+.show {
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
