--- a/craft.css
+++ b/craft.css
@@ -1,52 +1,57 @@
 .sidenav {
-    height: 100%; /* Full-height, remove if auto height is wanted */
-    width: 160px; /* Set the width of the sidebar */
-    /*position: fixed; /* Fixed sidebar (stays in place when scrolling) */
-    position: absolute;
-    z-index: 1; /* Stay on top */
-    top: 1; /* stay at the top */
-    left: 0;
-    background-color: #161a1d;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    /* padding-top: 20px; */
+  height: 100%; /* Full-height, remove if auto height is wanted */
+  width: 160px; /* Set the width of the sidebar */
+  /*position: fixed; /* Fixed sidebar (stays in place when scrolling) */
+  position: absolute;
+  z-index: 1; /* Stay on top */
+  top: 1; /* stay at the top */
+  left: 0;
+  background-color: #161a1d;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  /* padding-top: 20px; */
 }
 
 .sidenav a {
-    /* padding: 6px 8px 6px 16px; */
-    text-decoration: none; /* Removes decor like the little line under the link */
-    /* font-size: 25px; changes font size*/
-    display: block;
+  /* padding: 6px 8px 6px 16px; */
+  text-decoration: none; /* Removes decor like the little line under the link */
+  /* font-size: 25px; changes font size*/
+  display: block;
 }
 
 main {
-    margin-left: 160px; /* Same as sidebar */
-    padding: 0px 10px;
+  margin-left: 160px; /* Same as sidebar */
+  padding: 0px 10px;
 }
 
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 /* Dropdown button */
 .dropbtn {
-    background-color: #111111;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    /* border: double; */
-    cursor: pointer;
+  background-color: #111111;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  /* border: double; */
+  cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #161a1d;
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #161a1d;
 }
 
 /* The container div - needed to position the dropdown content */
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 /* Dropdown content (hidden by default) */
@@ -74,9 +79,9 @@ main {
 
 /* Show the dropdown menu (use js to add this class to the .dropdown container when the user clicks on the dropdown button) */
 .show {
-    display: block;
+  display: block;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
