upgraded header style

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,19 +1,6 @@
-html {
-  text-align: center;
-  background-color: #111111;
-  color: white;
-}
-
-h1 {
-  color: #e34234;
-}
-
-a {
-  color: #ba181b;
-}
-
-a:hover {
-  color: #660708;
+#coming-soon {
+  margin-top: 250px;
+  font-size: 30px;
 }
 
 .flex-container {
