--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
+@font-face {
+  font-family: titleFont;
+  src: url("assets/fonts/Western Bang Bang.otf");
+}
+header {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 7%;
+  height: 100px;
+}
+header h1 {
+  color: #e34234;
+  font-family: titleFont;
+  font-size: 70px;
+}
+header nav {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 55%;
+}
+header nav a {
+  color: #ba181b;
+  text-decoration: none;
+  font-size: 30px;
+  padding: 10px 15px;
+  transition: 0.2s;
+}
+header nav a:hover {
+  color: #d15757;
+  border-bottom: 5px solid #ad0808;
+}
+
+#coming-soon {
+  margin-top: 250px;
+  font-size: 30px;
+}
+
+.flex-container {
+  display: flex;
+  /*flex-direction: column;
+      Decides in which direction to stack the flex items.*/
+  /*flex-wrap: wrap;
+      Specifies whether the items should wrap or not*/
+  flex-flow: row wrap;
+  /*Shorthand for deciding setting flex-direction and flex-wrap at the same time*/
+  justify-content: space-around;
+  /* Decides how to align the content, flex-start is the default */
+}
+
 .sidenav {
   height: 100%;
   /* Full-height, remove if auto height is wanted */
@@ -88,30 +141,7 @@ html {
   text-align: center;
   background-color: #111111;
   color: white;
-}
-
-h1 {
-  color: #e34234;
-}
-
-a {
-  color: #ba181b;
-}
-
-a:hover {
-  color: #660708;
-}
-
-.flex-container {
-  display: flex;
-  /*flex-direction: column;
-      Decides in which direction to stack the flex items.*/
-  /*flex-wrap: wrap;
-      Specifies whether the items should wrap or not*/
-  flex-flow: row wrap;
-  /*Shorthand for deciding setting flex-direction and flex-wrap at the same time*/
-  justify-content: space-around;
-  /* Decides how to align the content, flex-start is the default */
+  font-family: sans-serif;
 }
 
 /*# sourceMappingURL=index.css.map */
